Add destruction option

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Messages | <%= @title %></title>
+    <title>Messages</title>
   </head>
   <body>
+ <ul>
+   <li><a href="/">Home</a></li>
+   <li><a href="/new">New Message</a></li>
+ </ul>
     <%= yield %>
   </body>
 </html>
